# table-app

./: .gitignore  Cargo.toml  data.duckdb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vote.sqlite
databox/: Cargo.toml
databox/src/: lib.rs
hello-world.sheetpkg/: meta.json
nulltest.sheetpkg/: meta.json
plugin-core/src/: lib.rs
plugin-macros/: Cargo.toml
plugin-macros/src/: lib.rs
plugin-macros/tests/: test_derive_plugin.rs
sql-tool/: Cargo.toml
sql-tool/src/: lib.rs
sql-tool/src/sql/: conn.rs
src/: App.tsx  test.tsx
src-tauri/: Cargo.toml  build.rs  my_sheet.json  tauri.conf.json  test_data.duckdb
src-tauri/bindings/: BasePayload.ts  DisplayCellResult.ts  FrontedSheet.ts  FrontedSheetData.ts  GetDisplayValueRequest.ts
src-tauri/src/: export_json_schema.rs  export_types.rs  fronted_args.rs  lib.rs  main.rs  sheet.rs
src-tauri/src/api/: base.rs  get_display_value.rs  load_sheet.rs  load_sheet_data.rs  macros.rs  mod.rs
src-tauri/src/cell_plugins/: cell.rs  mod.rs  null_cell.rs  registry.rs  rendering_config.rs  text_cell.rs
src-tauri/src/io/: loader.rs  saver.rs
src/lit-components/: my-button-wrapper.tsx  my-button.ts
src/my-components-v0/: ProtalPanel.tsx
src/my-components-v1/: ICellData.ts  IVirtualCells.ts  IVirtualSheet.ts  VirtualCells.ts  createVirtualCells.ts
src/tauri-api/: loadSheet.ts  loadSheetData.ts
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.css  App.tsx  global.d.ts
tauri-app/src-tauri/: 2  Cargo.toml  tauri.conf.json
test.sheetpkg/: meta.json
(+243 files in other folders)
