[workspace]
resolver = "2"
members = [ "databox", "plugin-core", "plugin-macros", "sql-tool","tauri-app/src-tauri"]

[workspace.dependencies]
duckdb = { version = "1.3.1", features = ["bundled", "polars"] }
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "55.2.0"
parquet = "55.2.0"
